fix: implement get category analysis -> get month and year from commamd